# chem-name-resolver

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_ja.md  README_zh.md  pyproject.toml
benches/: resolver_bench.rs
src/: error.rs  lib.rs  py.rs
src/dict/: mod.rs  synonyms.rs  word_map.rs
src/normalizer/: fullwidth.rs  greek.rs  katakana.rs  mod.rs
src/parser/: alkane.rs  formula.rs  inchi.rs  iupac_namer.rs  locant.rs  mod.rs  scanner.rs  smiles.rs  smiles_parser.rs  substituent.rs  suffix.rs
src/wasm/: mod.rs
tests/: iupac_corpus.rs
