[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "chem-name-resolver"
version = "0.1.0"
description = "Pure-Rust IUPAC chemical name resolver — Python bindings"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[tool.maturin]
features = ["python"]
module-name = "chem_name_resolver"
